<resources>
    <string name="app_name">Train EZ</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_enter_your_weight">Please enter your weight</string>
    <string name="weightTabInfo">Weight</string>
    <string name="ExerciseTabInfo">Exercises</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_progress">My progress</string>
    <string name="weight">Weight</string>
    <string name="help">Help</string>
    <string name="Contact">Contact</string>
    <string name="start_program">Start Program</string>
    <string name="my_program">My program</string>
</resources>
