<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heartbackground"
    tools:context="dk.aau.gr6406.trainez.MainMenuActivity">

    <TextView
        android:id="@+id/stat_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-1dp"
        android:text="@string/my_progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stat_menu_button" />

    <ImageButton
        android:id="@+id/compose_menu_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/bluebuttonstyle"
        android:elevation="0dp"
        android:onClick="composeProgrammeButtonClicked"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contac"
        app:srcCompat="@drawable/myprograamnew" />

    <ImageButton
        android:id="@+id/weight_menu_button"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bluebuttonstyle"
        android:onClick="enterWeightButtonClicked"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weightnew" />

    <ImageButton
        android:id="@+id/start_menu_button"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/bluebuttonstyle"
        android:elevation="0dp"
        android:onClick="playProgrammeButtonClicked"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_menu_text"
        app:srcCompat="@drawable/playiconnew" />

    <ImageButton
        android:id="@+id/stat_menu_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/bluebuttonstyle"
        android:onClick="viewStatisticsButtonClicked"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/statmaintest" />

    <TextView
        android:id="@+id/weight_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_menu_button" />

    <TextView
        android:id="@+id/Contac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:text=" Info"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/help"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_menu_button" />

    <TextView
        android:id="@+id/start_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/start_program"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_menu_button" />

    <TextView
        android:id="@+id/compose_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/my_program"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compose_menu_button" />

    <ImageButton
        android:id="@+id/help_menu_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/help_button"
        android:onClick="helpClickedButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/info_button"
        android:onClick="contactButtonClicked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
